<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_backgroundColor"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/app_backgroundColor"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp" >

        <!-- DAA Logo -->

        <ImageView
            android:id="@+id/logo"
            android:layout_width="197dp"
            android:layout_height="95dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/login_title"
            android:paddingTop="20dp"
            android:src="@drawable/logo" />

        <!-- User ID Views -->

        <TextView
            android:id="@+id/id_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_id_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/label_text_color" />

        <EditText
            android:id="@+id/id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/login_id_hint"
            android:maxLength="8"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Password Views -->

        <TextView
            android:id="@+id/password_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login_password_label"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/label_text_color" />

        <EditText
            android:id="@+id/password_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/login_password_hint"
            android:inputType="textPassword"
            android:maxLength="12"
            android:textColor="@android:color/black"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <!-- Login Button -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="DoLoginAction"
                android:text="@string/login_login_button"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        </LinearLayout>
    </LinearLayout>

    <!-- Login Footer -->

    <LinearLayout
        android:id="@+id/login_footer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_backgroundColor"
        android:gravity="bottom" >

        <LinearLayout
            android:id="@+id/login_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/label_background_color"
            android:gravity="bottom" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right" >

                <ImageView
                    android:id="@+id/login_mode_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:src="@drawable/ic_login_mode" />

                <TextView
                    android:id="@+id/login_mode_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:text="@string/login_mode"
                    android:textColor="@color/transparent_gray"
                    android:textSize="10dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>