<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="left" >

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
 
        <TextView
            android:id="@+id/mensajeFecha"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp" 
            android:drawableLeft="@drawable/ic_alert_circle"
            android:drawablePadding="10dp"
            android:gravity="center_vertical" 
            android:text="@string/mensaje_fecha"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="3dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/fecha"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fecha_actual"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/fechaActual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/negro" />

            <TextView 
                android:id="@+id/hora"
                android:layout_width="fill_parent"	
                android:layout_height="wrap_content"
                android:text="@string/hora_actual"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/white" />
            
            <TextView
                android:id="@+id/horaActual"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"
                android:gravity="center_vertical"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/negro" />
        </LinearLayout>

        <LinearLayout
            style="@android:style/ButtonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:orientation="horizontal"
            android:weightSum="10" >

            <Button
                android:id="@+id/aceptarFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="5"
                android:text="@string/yes" />
            <Button
                android:id="@+id/cancelarFecha"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="5"
                android:text="@string/no" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>